--- a/major/src/main/resources/templates/cart.html
+++ b/major/src/main/resources/templates/cart.html
@@ -31,7 +31,7 @@
 <!--          <li class="nav-item active"> <a class="nav-link" th:href="@{/shop/-1}" href="#">shop</a> </li>-->
           <li class="nav-item active"> <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">Войти</a> </li>
           <li class="nav-item active"> <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">Выйти</a> </li>
-          <li class="nav-item active"> <a class="nav-link" th:href="@{/cart}" href="#">cart</a> </li>
+          <li class="nav-item active"> <a class="nav-link" th:href="@{/cart}" href="#">Favourites</a> </li>
           <li class="nav-item active"> <span class="nav-link" th:text="${cartCount}">0</span> </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
                     <div class="card wish-list mb-4">
                         <div class="card-body">
 
-                            <h5 class="mb-4">Cart (<span th:text="${cartCount}">2</span> items)</h5>
+                            <h5 class="mb-4">Favourites (<span th:text="${cartCount}">2</span> items)</h5>
 <!--                            <div class="card" style="margin-top: 20px" th:each="product : ${cart}">-->
 <!--                                <div style="padding-top: 20px" class="row no-gutters">-->
 <!--                                    <div class="col-sm-5 d-flex justify-content-center">-->
@@ -133,7 +133,7 @@
                                     <span>$<span th:text="${total}"></span></span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                    SOsi HUY
+                                    SOs
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                     <div>
@@ -159,7 +159,7 @@
 
                             <a class="dark-grey-text d-flex justify-content-between" data-toggle="collapse" href="#collapseExample"
                                aria-expanded="false" aria-controls="collapseExample">
-                                Опциональная хуня (optional)
+                                Опциональная (optional)
                                 <span><i class="fas fa-chevron-down pt-1"></i></span>
                             </a>
 
