--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -139,8 +139,7 @@ body {
 	border: solid white 2px;
 	margin-right: 15px;
 	padding-left: 10px;
-	float: left;
-	width: 70%;
+	width: 60%;
 	outline: none;
 }
 
@@ -329,10 +328,11 @@ body {
 }
 
 .items-placeholder {
-	vertical-align: top;
-	width: 250px;
+	margin: 0 auto;
+	max-height: 290px;
+	width: 80%;
 	background-color: #272727;
-	display: inline-block;
+	display: block;
 	border: 3px solid white;
 	color: white;
 }
@@ -341,54 +341,102 @@ body {
 	font-size: 25px;
 }
 
-.info-placeholder {
-	font-size: 25px;
-	vertical-align: top;
-	height: 50vh;
-	width: 40%;
-	background-color: #272727;
-	display: inline-block;
-	border: 3px solid white;
-	color: white;
+.floating-text {	
+	display: inline-grid;
+	/* -webkit-animation: scrolling-left1 30s linear infinite alternate-reverse; */
+	animation: left-scroll 20s linear infinite alternate;
+	transition: all 2s ease;
+	z-index: 1;
+	rotate: 30deg;
+	white-space: nowrap;
+	font-size: 50px;
+	color: #228E5D;
 }
 
-.look_img {
-	border: 1px solid white;
-	width: 132px;
-	height: 192px;
-	display: block;
-	text-align: center;
+.mv-text-contents {
+	text-transform: uppercase;
+}
+
+@keyframes left-scroll {
+    0% {transform: translateX(0%);
+        /* -webkit-transform: translateX(100%); */
+	}
+      100% {transform: translateX(-100%);
+        /* -webkit-transform: translateX(-100%); */
+	}
+}
+
+/* @-webkit-keyframes left-scroll {
+    0% {-webkit-transform: translateX(100%);}
+      100% {-webkit-transform: translateX(-100%);}
+} */
+
+.info-placeholder {
+	display: grid;
+	align-items: center;
+	justify-items: center;
+	overflow: hidden;
+    background-size: cover;             
+	margin-top: 20px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 10px;
-	margin-top: 10px;
+	font-size: 25px;
+	vertical-align: top;
+	height: 400px;
+	width: 60%;
+	background-color: #272727;
+	border: 3px solid white;
+	color: white;
+	margin-bottom: 60px;
 }
 
-#desc-text {
-	font-size: 20px;
-	width: 100%;
+.info-placeholder > * {
+	grid-column-start: 1;
+	grid-row-start: 1;
+  }
+
+#name {
+	width: 70%;
 }
 
-#label-text {
-	font-size: 20px;
+.look_btn {
+	width: auto;
 }
 
-#label-subm {
-
-	vertical-align: middle;
-	margin: 0 auto;
-	float: right;
-	font-size: 20px;	
+.info-placeholder-2 {
+	z-index: 5;
+	grid-column-start: 1;
+	grid-row-start: 1;
+	position: absolute;
+	max-width: 70%;
+	background-color: rgb(24, 24, 24);
+	margin: 30px 0;
 	display: inline-block;
+	width: 50rem;
+	border: 2px solid white;
 }
 
 #look-label {
 	margin-bottom: 10px;
 	text-align: left;
 	padding-left: 30px;
+	text-decoration: underline;
+}
+
+.look_input_description {
+	width: 100%;
+	border: none;
+    background: #fff;
+    resize: none;
+    outline: none;
+}
+
+#description {
+	background: #dedede;
 }
 
 #look-desc {
+	text-decoration: underline;
 	text-align: left;
 	margin: 10px 0;
 }
@@ -403,6 +451,46 @@ body {
 	width: 90%;
 	display: inline-block;
 	text-align: left;
+}
+
+.look_img {
+	border: 1px solid white;
+	width: 132px;
+	height: 192px;
+	display: inline-block;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+/*
+.img_container {
+	margin: 10px;
+}
+*/
+
+#desc-text {
+	font-size: 20px;
+	width: 100%;
+}
+/* 
+#name {
+	display: inline-block;
+	text-align: left;
+} */
+
+#label-text {
+	font-size: 20px;
+}
+
+#label-subm {
+	vertical-align: middle;
+	margin: 0 auto;
+	float: right;
+	font-size: 20px;	
+	display: inline-block;
 }
 
 .view_img {
