--- a/major/src/main/resources/templates/lookamaker.html
+++ b/major/src/main/resources/templates/lookamaker.html
@@ -60,7 +60,7 @@
 <!--						</div>-->
 						<label class="switch products" th:id="${product.id}">
 							<input type="checkbox" id="checkbox">
-<!--							<span class="slider round"></span>-->
+							<span class="slider round"></span>
 						</label>
 					</div>
 				</div>
@@ -84,12 +84,12 @@
 	<!--					<input type="hidden" name="id"  th:field="{id}">-->
 						<div id="look-label">Название</div>
 						<div class="look-inputs">
-							<input  id="name" type="text" required name="name" placeholder="Введите название" align="left">
+							<input  id="name" type="text" required name="name" placeholder="Введите название">
 							<button class="cart_btn look_btn" onclick="createNewSet()">Сохранить</button>
 						</div>
 						<div class="look-inputs">
 							<div id="look-desc">Информация</div>
-							<textarea class="look_input_description" required name="description" placeholder="Введите описание" cols="40" rows="5"></textarea>
+							<textarea class="look_input_description" id="description" required name="description" placeholder="Введите описание" cols="40" rows="5"></textarea>
 						</div>
 						<label id="success"></label>
 			<!--			<input id="desc-text" type="text" placeholder="Введите описание">-->
